--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -144,3 +144,7 @@ bazel_dep(name = "rules_multirun", version = "0.9.0")
 
 # Specify to support stackb_rules_proto in bazel 7
 bazel_dep(name = "rules_apple", version = "3.7.0", repo_name = "build_bazel_rules_apple")
+
+# Bazel rule helpers, including testing
+bazel_dep(name = "bazel_skylib", version = "1.7.1")
+bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.7.1", dev_dependency = True)
