--- a/testing/BUILD
+++ b/testing/BUILD
@@ -1,13 +1,14 @@
 load("//bzl:cc.bzl", "cc_library")
 
-
 # Alternatively, we could just use @catch2//:catch_main
 cc_library(
     name = "catch_main",
-    testonly=True,
+    testonly = True,
     srcs = ["catch_main.cc"],
+    visibility = ["//visibility:public"],
     deps = [
         "@catch2",
     ],
-    visibility = ["//visibility:public"],
 )
+
+package(default_visibility = ["//visibility:private"])
