--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -39,10 +39,14 @@ jobs:
           # XXX: Should we test in addition / segregate some?
           # XXX: Should we test in different modes?
           # XXX: Should we add instrumentation_filter to .bazelrc?
+          #
       - name: Coverage
         run: |
           bazel coverage //... --combined_report=lcov --instrument_test_targets --instrumentation_filter="^//"
-          # XXX: Do we need to install lcov?
+      - name: Setup LCOV
+        uses: hrishikesh-kadam/setup-lcov@v1
+      - name: Coverage Report Generation
+        run: |
           # Remove external/ sources: https://manpages.debian.org/unstable/lcov/lcov.1.en.html
           lcov --remove "$(bazel info output_path)/_coverage/_coverage_report.dat" 'external*' -o coverage.dat
           genhtml --legend --highlight --branch-coverage --output genhtml coverage.dat
