--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -48,17 +48,17 @@ jobs:
       - name: Coverage Report Generation
         run: |
           # Remove external/ sources: https://manpages.debian.org/unstable/lcov/lcov.1.en.html
-          lcov --remove "$(bazel info output_path)/_coverage/_coverage_report.dat" 'external*' -o coverage.dat
+          lcov --remove "$(bazel info output_path)/_coverage/_coverage_report.dat" 'external*' -o coverage.txt
           # Show Table
-          lcov --list coverage.dat
+          lcov --list coverage.txt
           # Generate HTML
-          genhtml --legend --highlight --branch-coverage --output genhtml coverage.dat
+          genhtml --legend --highlight --branch-coverage --output genhtml coverage.txt
       # See https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/storing-workflow-data-as-artifacts
-      - name: Archive coverage.dat
+      - name: Archive coverage.txt
         uses: actions/upload-artifact@v4
         with:
           name: code-coverage-report
-          path: coverage.dat
+          path: coverage.txt
       - name: Archive genhtml
         uses: actions/upload-artifact@v4
         with:
@@ -69,7 +69,7 @@ jobs:
         with:
           verbose: true
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: coverage.dat
+          files: coverage.txt
       # Try out https://app.codecov.io/ or
       # https://github.com/marketplace/actions/report-lcov and ensure min
       # coverage is met
