--- a/system/BUILD
+++ b/system/BUILD
@@ -1,3 +1,5 @@
+load("@pigweed//pw_build:compatibility.bzl", "host_backend_alias")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
@@ -9,5 +11,25 @@ cc_library(
         # Allow us to capture two 64bit pointers in a pw::function.
         "PW_FUNCTION_INLINE_CALLABLE_SIZE=16UL",
         "PW_ASSERT_BASIC_ACTION=PW_ASSERT_BASIC_ACTION_EXIT",
+    ],
+)
+
+label_flag(
+    name = "system",
+    build_setting_default = ":unspecified_backend",
+)
+
+host_backend_alias(
+    name = "unspecified_backend",
+    backend = "//targets/host:system",
+)
+
+cc_library(
+    name = "headers",
+    hdrs = [
+        "system.h",
+    ],
+    deps = [
+        "@pigweed//pw_digital_io",
     ],
 )
