--- a/tools/BUILD
+++ b/tools/BUILD
@@ -89,3 +89,15 @@ py_binary(
     srcs = ["coverage_baseline.py"],
     visibility = ["//:__subpackages__"],
 )
+
+# py_binary(
+#     name = "console",
+#     srcs = ["console.py"],
+#     deps = [
+#         "//modules/blinky:py_pb2",
+#         "@pigweed//pw_protobuf:common_py_pb2",
+#         "@pigweed//pw_rpc:echo_py_pb2",
+#         "@pigweed//pw_system/py:pw_system_lib",
+#     ],
+#     visibility = ["//:__subpackages__"],
+# )
