--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 # https://docs.github.com/en/repositories/working-with-files/managing-files/customizing-how-changed-files-appear-on-github
-gazelle_python.yaml linguist-generated=true
-requirements_lock.txt linguist-generated=true
-MODULE.bazel.lock linguist-generated=true
+gazelle_python.yaml linguist-generated=true -diff
+requirements_lock.txt linguist-generated=true -diff
+MODULE.bazel.lock linguist-generated=true -diff
