--- a/examples/pigweed/BUILD
+++ b/examples/pigweed/BUILD
@@ -1,3 +1,6 @@
+# Keep things easy for now
+# gazelle:default_visibility //visibility:public
+
 filegroup(
     name = "pw_console_config",
     srcs = [
@@ -5,3 +8,5 @@ filegroup(
     ],
     visibility = ["//visibility:public"],
 )
+
+package(default_visibility = ["//visibility:public"])
