--- a/examples/pigweed/tools/BUILD
+++ b/examples/pigweed/tools/BUILD
@@ -5,7 +5,7 @@ og_py_binary(
     srcs = ["console.py"],
     visibility = ["//:__subpackages__"],
     deps = [
-        "//examples/pigweed/modules/blinky:py_pb2",
+        "//examples/pigweed/modules/blinky:blinky_pb2",
         "@pigweed//pw_protobuf:common_py_pb2",
         "@pigweed//pw_rpc:echo_py_pb2",
         "@pigweed//pw_system/py:pw_system_lib",
