--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -14,7 +14,6 @@ module(
 # Generic deps
 ########################################
 bazel_dep(name = "aspect_bazel_lib", version = "2.5.1")
-bazel_dep(name = "platforms", version = "0.0.9")
 
 ########################################
 # Set up rules_python and pip
@@ -23,7 +22,7 @@ bazel_dep(name = "aspect_rules_py", version = "0.7.3")
 
 # Minimum version needs:
 # feat: add interpreter_version_info to py_runtime by @mattem in #1671
-bazel_dep(name = "rules_python", version = "0.29.0", dev_dependency = True)
+bazel_dep(name = "rules_python", version = "0.34.0", dev_dependency = True)
 
 python = use_extension("@rules_python//python/extensions:python.bzl", "python")
 
@@ -44,7 +43,8 @@ pip.parse(
 )
 use_repo(pip, "pip")
 
-bazel_dep(name = "protobuf", version = "26.0")
+# TODO(#91): Allow bumping this up to 26 or greater while avoiding segfault
+bazel_dep(name = "protobuf", version = "24.4")
 bazel_dep(name = "rules_rust", version = "0.48.0")
 
 rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
@@ -148,7 +148,7 @@ bazel_dep(name = "rules_apple", version = "3.7.0", repo_name = "build_bazel_rule
 # Bazel rule helpers, including testing
 bazel_dep(name = "bazel_skylib", version = "1.7.1")
 
-bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.7.1", dev_dependency = True)
+bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.7.1", dev_dependency = True)  # mchristen add
 
 # Allow platform transitions
 bazel_dep(name = "rules_platform", version = "0.1.0")
@@ -164,4 +164,86 @@ bazel_dep(name = "catch2", version = "3.6.0")
 register_toolchains(
     "//examples/bazel:foo_rude_toolchain",
     "//examples/bazel:foo_nice_toolchain",
+)
+
+# Pigweed
+######################################
+
+bazel_dep(name = "freertos", version = "10.5.1.bcr.2")
+bazel_dep(name = "nanopb", repo_name = "com_github_nanopb_nanopb")
+bazel_dep(name = "pico-sdk", version = "2.0.0")
+bazel_dep(name = "pigweed")
+bazel_dep(name = "platforms", version = "0.0.10")
+bazel_dep(name = "pw_toolchain")
+bazel_dep(name = "rules_cc")
+
+bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
+
+# Module overrides
+# ================
+# TODO: https://pwbug.dev/349880767 - Point this back to the upstream repo once
+# this PR is merged.
+archive_override(
+    module_name = "hedron_compile_commands",
+    strip_prefix = "bazel-compile-commands-extractor-163521345aa6366fd1ed801b989b668b5c806f69",
+    urls = ["https://github.com/chadnorvell/bazel-compile-commands-extractor/archive/163521345aa6366fd1ed801b989b668b5c806f69.tar.gz"],
+)
+
+archive_override(
+    module_name = "rules_rust",
+    integrity = "sha256-+bWb47wg0VchIADaHt6L5Dma2Gn+Q589nz/MKcTi+lo=",
+    # Can only apply patches from local workspace
+    # patch_strip = 1,
+    # patches = [
+    #     # Fix rustdoc test w/ proc macros
+    #     # https://github.com/bazelbuild/rules_rust/pull/1952
+    #     "@pigweed//pw_rust/bazel_patches:0001-rustdoc_test-Apply-prefix-stripping-to-proc_macro-de.patch",
+    #     # Adds prototype functionality for documenting multiple crates in one
+    #     # HTML output directory.  While the approach in this patch may have
+    #     # issues scaling to giant mono-repos, it is appropriate for embedded
+    #     # projects and minimally invasive and should be easy to maintain.  Once
+    #     # the `rules_rust` community decides on a way to propperly support this,
+    #     # we will migrate to that solution.
+    #     # https://github.com/konkers/rules_rust/tree/wip/rustdoc
+    #     "@pigweed//pw_rust/bazel_patches:0002-PROTOTYPE-Add-ability-to-document-multiple-crates-at.patch",
+    # ],
+    urls = ["https://github.com/bazelbuild/rules_rust/releases/download/0.45.1/rules_rust-v0.45.1.tar.gz"],
+)
+
+# TODO: https://pwbug.dev/354274498 - nanopb is not yet in the BCR.
+git_override(
+    module_name = "nanopb",
+    commit = "7c6c581bc6f7406a4f01c3b9853251ff0a68458b",
+    remote = "https://github.com/nanopb/nanopb.git",
+)
+
+git_override(
+    module_name = "pigweed",
+    # ROLL: Warning: this entry is automatically updated.
+    # ROLL: Last updated 2024-08-14.
+    # ROLL: By https://cr-buildbucket.appspot.com/build/8739669590315800497.
+    commit = "c9d5bef2f82612fa8d4be0d53b614bbc02bab62b",
+    remote = "https://pigweed.googlesource.com/pigweed/pigweed",
+)
+
+git_override(
+    module_name = "pw_toolchain",
+    # ROLL: Warning: this entry is automatically updated.
+    # ROLL: Last updated 2024-08-14.
+    # ROLL: By https://cr-buildbucket.appspot.com/build/8739669590315800497.
+    commit = "c9d5bef2f82612fa8d4be0d53b614bbc02bab62b",
+    remote = "https://pigweed.googlesource.com/pigweed/pigweed",
+    strip_prefix = "pw_toolchain_bazel",
+)
+
+# TODO: https://pwbug.dev/258836641 - Pre-release version needed for the Pico
+# SDK. Remove this once rules_cc 0.10.0 is released and the Pico SDK
+# MODULE.bazel declares its dependency on it.
+archive_override(
+    module_name = "rules_cc",
+    integrity = "sha256-NddP6xi6LzsIHT8bMSVJ2NtoURbN+l3xpjvmIgB6aSg=",
+    strip_prefix = "rules_cc-1acf5213b6170f1f0133e273cb85ede0e732048f",
+    urls = [
+        "https://github.com/bazelbuild/rules_cc/archive/1acf5213b6170f1f0133e273cb85ede0e732048f.zip",
+    ],
 )
