Keep system just the necessary module configs

--- a/examples/pigweed/apps/blinky/BUILD
+++ b/examples/pigweed/apps/blinky/BUILD
@@ -8,7 +8,7 @@ cc_binary(
     srcs = ["main.cc"],
     deps = [
         "//examples/pigweed/modules/blinky:service",
-        "//system",
+        "//examples/pigweed/system",
         "@pigweed//pw_log",
         "@pigweed//pw_system:async",
 
