--- a/docs/BUILD
+++ b/docs/BUILD
@@ -1,10 +1,6 @@
-load("//tools/sphinx:sphinx.bzl", "sphinx_html")
-
-sphinx_html(
-    name = "docs",
-    config = "conf.py",
-    index = "index.rst",  # Test non-canonical naming.
-    srcs = [
+exports_files(
+    [
         "hello.rst",
     ],
+    visibility = ["//visibility:public"],
 )
