Making a lot of docs

--- a/docs/BUILD
+++ b/docs/BUILD
@@ -6,5 +6,10 @@ sphinx_html(
     index = "index.rst",  # Test non-canonical naming.
     srcs = [
         "hello.rst",
+        "myst.md",
+        # has warnings
+        # "myst_extensions.md",
+        "examples.md",
     ],
+
 )
